# netrc-parser

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: simple.rs
proptest-regressions/: lib.txt
src/: error.rs  lib.rs
