[package]
name = "netrc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
nom = "8.0.0"
proptest = "1.6.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.22"

[dev-dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
proptest = "1.6.0"
