[package]
name = "netrc-parser"
version = "0.1.0"
edition = "2024"
description = "A Rust library for parsing and manipulating .netrc files"
license = "MIT"
repository = "https://github.com/dantescur/netrc-parser"
keywords = ["netrc", "parser", "authentication", "credentials"]
categories = ["parsing", "authentication"]
readme = "README.md"

[dependencies]
dirs = "6.0.0"
log = "0.4.27"
nom = "8.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.22"

[dev-dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
proptest = "1.6.0"

[[example]]
name = "simple"
path = "examples/simple.rs"
